<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.WelcomeActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:alpha="0"
        tools:alpha="100"/>

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/img_welcome"
        android:layout_margin="8dp"
        android:alpha="0"
        tools:alpha="100"
        android:contentDescription="@string/image_welcome" />

    <TextView
        android:id="@+id/txt_desc_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/description_welcome"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="8dp"
        android:alpha="0"
        tools:alpha="100"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/started"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:alpha="0"
        tools:alpha="100"/>

</LinearLayout>
